--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-
-Dependancies:
+1. Dependancies:
 
 The following have known working versions in the lib/ folder:
 
@@ -9,3 +8,9 @@ ASM
 slf4j and an slf4j backend (for example log3j)
 
 Additionally you will need an eclipse JEE install.
+
+2. Compiling
+
+3. Running
+
+
