--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@
 Immediate:
     Fix Silhouetting
      - Totally compress the nodes
+        - identify lines to compress
+        - check minimisation
 
 Next:
     Finish README
